[package]
name = "mpc"
version = "0.0.1"
authors = [
	"Sean Bowe <ewillbefull@gmail.com>",
	"Ariel Gabizon <ariel@z.cash>",
	"Matthew Green <mgreen@cs.jhu.edu>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
snark = { path = "./snark/" }
bn = "0.2.2"
crossbeam = "0.2.9"
rand = "0.3.14"
rustc-serialize = "~0.3.19"

[dependencies.bincode]
version = "0.6.0"
default-features = false
features = ["rustc-serialize"]
