[package]
name = "mpc"
version = "0.0.1"
authors = [
	"Sean Bowe <ewillbefull@gmail.com>",
	"Ariel Gabizon <ariel@z.cash>",
	"Matthew Green <mgreen@cs.jhu.edu>"
]
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "coordinator"
path = "src/coordinator.rs"
# avoid duplicate tests
test = false

[[bin]]
name = "verifier"
path = "src/verifier.rs"
# avoid duplicate tests
test = false

[[bin]]
name = "player"
path = "src/player.rs"

[features]
default = ["snark"]

[dependencies.snark]
path = "./snark/"
optional = true

[dependencies]
bn = "0.3.0"
crossbeam = "0.2.9"
rand = "0.3.14"
rustc-serialize = "~0.3.19"
log = "*"
env_logger = "*"
time = "*"
ansi_term = "*"

[dependencies.bincode]
version = "0.6.0"
default-features = false
features = ["rustc-serialize"]
