[package]
name = "snark"
version = "0.0.1"
authors = [
	"Sean Bowe <ewillbefull@gmail.com>",
	"Ariel Gabizon <ariel@z.cash>",
	"Matthew Green <mgreen@cs.jhu.edu>"
]
license = "MIT OR Apache-2.0"

build = "src/build.rs"

[build-dependencies]
gcc = "0.3.*"

[dependencies]
libc = "0.2.*"
lazy_static = "0.1.*"
